apps/tsfa-social/overlays/aws-us-west-2-cc-smarsh-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsfa-social
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tsfa-social
      app.kubernetes.io/instance: tsfa-social
  template:
    spec:
      containers:
        - name: tsfa-social
          resources:
            limits:
              cpu: 2000m
              memory: 3G
              ephemeral-storage: 1G
            requests:
              cpu: 100m
              memory: 2G
              ephemeral-storage: 256M
